--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply bg-zinc-950;
+  }
+
+  h1 {
+    @apply text-3xl font-bold text-zinc-50;
+  }
+  button {
+    @apply bg-zinc-300 text-zinc-900 font-medium px-4 py-2 rounded-xl transition duration-300;
+  }
+}
+
+@layer components {
+  .card {
+    @apply bg-zinc-200/5 p-6 rounded-3xl  min-h-[300px];
+  }
+  .btn-primary {
+    @apply hover:bg-blue-400;
+  }
+}
+/* bg-gradient-to-br from-zinc-950 to-stone-700 border-2 border-zinc-600/50*/
